SFUSA/force-app/main/default/objects/Campaign__c/fields/Activation_Campaign__c.field-meta.xml
<CustomField>
        <fullName>Activation_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used for National Marketing to identify Activation Campaigns.</inlineHelpText>
        <label>Activation Campaign?</label>
        <type>Checkbox</type>
    </CustomField>