SFUSA/force-app/main/default/objects/Campaign__c/fields/April_Budget__c.field-meta.xml
<CustomField>
        <fullName>April_Budget__c</fullName>
        <label>April Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>