SFUSA/force-app/main/default/objects/Campaign__c/fields/ATL_OR_BTL__c.field-meta.xml
<CustomField>
        <fullName>ATL_OR_BTL__c</fullName>
        <label>ATL OR BTL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATL</fullName>
                </value>
                <value>
                    <fullName>BTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>