SFUSA/force-app/main/default/objects/Campaign__c/fields/Balance_Budget_vs_Campaign_Planning__c.field-meta.xml
<CustomField>
        <fullName>Balance_Budget_vs_Campaign_Planning__c</fullName>
        <formula>PlannedCampaignSpend__c - Campaign_Planning__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance (Budget vs Campaign Planning)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>