SFUSA/force-app/main/default/objects/Campaign__c/fields/Campaign_Balance_Budget_Actuals__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Balance_Budget_Actuals__c</fullName>
        <formula>PlannedCampaignSpend__c - ( ActualCampaignSpend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Balance (Budget  - Actuals)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>