SFUSA/force-app/main/default/objects/Campaign__c/fields/Campaign_Planning__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Planning__c</fullName>
        <description>Sum of Total Planning Amount</description>
        <inlineHelpText>Sum of Total Planning Amount</inlineHelpText>
        <label>Campaign Planning</label>
        <summarizedField>Campaign_Spend__c.Total_Planning_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Campaign_Spend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Campaign Planning &amp; Forecasting</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Campaign_Spend__c.Total_Planning_Amount__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>