SFUSA/force-app/main/default/objects/Campaign__c/fields/CampaignBalance__c.field-meta.xml
<CustomField>
        <fullName>CampaignBalance__c</fullName>
        <description>Campaign Budget - (Actual Campaign Spend + Committed Campaign Spend + Pending Campaign Spend)</description>
        <formula>PlannedCampaignSpend__c  - ( ActualCampaignSpend__c  +  CommittedCampaignSpend__c +  SFPR_Campaign_Spend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campaign Budget - (Actual Campaign Spend + Committed Campaign Spend + Pending Campaign Spend).</inlineHelpText>
        <label>Campaign Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>