SFUSA/force-app/main/default/objects/Campaign__c/fields/CampaignType__c.field-meta.xml
<CustomField>
        <fullName>CampaignType__c</fullName>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>Other Programming</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Brand Investment</fullName>
                </value>
                <value>
                    <fullName>National POS (Finance Only)</fullName>
                </value>
                <value>
                    <fullName>National POS-COGS (Finance Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>