SFUSA/force-app/main/default/objects/Campaign__c/fields/Child_Campaign__c.field-meta.xml
<CustomField>
        <fullName>Child_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Child Campaigns</relationshipLabel>
        <relationshipName>ChildCampaigns</relationshipName>
        <type>Lookup</type>
    </CustomField>