SFUSA/force-app/main/default/objects/Campaign__c/fields/Comments__c.field-meta.xml
<CustomField>
        <fullName>Comments__c</fullName>
        <description>Used to capture Budget comments anytime Budget is modified.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </CustomField>