SFUSA/force-app/main/default/objects/Campaign__c/fields/Committed_Actual_Spend__c.field-meta.xml
<CustomField>
        <fullName>Committed_Actual_Spend__c</fullName>
        <formula>ActualCampaignSpend__c +  CommittedCampaignSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed + Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>