SFUSA/force-app/main/default/objects/Campaign__c/fields/CommittedCampaignSpend__c.field-meta.xml
<CustomField>
        <fullName>CommittedCampaignSpend__c</fullName>
        <description>Sum of Committed Spend sent from SAP.</description>
        <inlineHelpText>Sum of Committed Spend sent from SAP.</inlineHelpText>
        <label>Committed Campaign Spend</label>
        <summarizedField>Campaign_Spend__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Campaign_Spend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Committed_AUS, Committed</value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>