SFUSA/force-app/main/default/objects/Campaign__c/fields/Country__c.field-meta.xml
<CustomField>
        <fullName>Country__c</fullName>
        <formula>text( ParentMarketingPlan__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </CustomField>