SFUSA/force-app/main/default/objects/Campaign__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Date__c</fullName>
        <description>Used by marketing/finance to dictate when POS materials are delivered to a warehouse. Used in IFRS reporting</description>
        <inlineHelpText>This is the date goods are received.  This will be used to tie back to our IFRS financials.</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </CustomField>