SFUSA/force-app/main/default/objects/Campaign__c/fields/Distributor__c.field-meta.xml
<CustomField>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.ProgramPartner__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Distributor)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </CustomField>