SFUSA/force-app/main/default/objects/Campaign__c/fields/DistributorQuotaDetails__c.field-meta.xml
<CustomField>
        <fullName>DistributorQuotaDetails__c</fullName>
        <description>The Distributor Quota Details as it's found on the mirrored program.</description>
        <formula>Mirrored_Program__r.DistributorQuotaDetails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Distributor Quota Details as it's found on the mirrored program in which the state managers are managing this field</inlineHelpText>
        <label>Distributor Quota Details</label>
        <type>Text</type>
    </CustomField>