SFUSA/force-app/main/default/objects/Campaign__c/fields/Division__c.field-meta.xml
<CustomField>
        <fullName>Division__c</fullName>
        <formula>text ( ParentMarketingPlan__r.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </CustomField>