SFUSA/force-app/main/default/objects/Campaign__c/fields/FBS_RTD__c.field-meta.xml
<CustomField>
        <fullName>FBS_RTD__c</fullName>
        <label>FBS/RTD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FBS</fullName>
                </value>
                <value>
                    <fullName>RTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>