SFUSA/force-app/main/default/objects/Campaign__c/fields/GL_Contact__c.field-meta.xml
<CustomField>
        <fullName>GL_Contact__c</fullName>
        <label>Contact</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GLCode__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle packed with gift (for example: pack with glasses, mini bottles, or other accessories)</fullName>
                </value>
                <value>
                    <fullName>Brand's official website</fullName>
                </value>
                <value>
                    <fullName>Brand activities/parties in bars, restaurants or nightclubs (for example: sampling, promo girls, tasting events, food matching, etc.)</fullName>
                </value>
                <value>
                    <fullName>Brand advertising on websites, apps and mobile sites excluding social media</fullName>
                </value>
                <value>
                    <fullName>Brand advertising videos on YouTube</fullName>
                </value>
                <value>
                    <fullName>Branded items in bars, restaurants or nightclubs (ice buckets, branded glasses and napkins)</fullName>
                </value>
                <value>
                    <fullName>Brand endorsement by celebrities</fullName>
                </value>
                <value>
                    <fullName>Brand found on search engines (for example: Google, Bing, Yahoo, etc.)</fullName>
                </value>
                <value>
                    <fullName>Brand gets named or recognized in editorials, articles or reviews by an independent, third party</fullName>
                </value>
                <value>
                    <fullName>Brand hosted events (ticketed event run by the brand or event that requires RSVP)</fullName>
                </value>
                <value>
                    <fullName>Brand listed on the menus of bars, restaurants or nightclubs</fullName>
                </value>
                <value>
                    <fullName>Brand materials in the store (for example: at shelf recipe card or info like product awards, window or floor decals, posters, in-store circular)</fullName>
                </value>
                <value>
                    <fullName>Brand on retailers' websites or apps, including ratings and reviews (for example: Amazon, Walmart)</fullName>
                </value>
                <value>
                    <fullName>Brand sponsorship or presence at food or drink events (for example: gourmet festival, food &amp; fine, etc.)</fullName>
                </value>
                <value>
                    <fullName>Brand sponsorship or presence at music/sport events or festivals</fullName>
                </value>
                <value>
                    <fullName>In store brand displays (for example: freestanding cardboard cut outs or end caps)</fullName>
                </value>
                <value>
                    <fullName>In store price reduction (for example: sales, price promotions, coupons)</fullName>
                </value>
                <value>
                    <fullName>In store tasting or sampling events</fullName>
                </value>
                <value>
                    <fullName>Magazines/newspapers advertising</fullName>
                </value>
                <value>
                    <fullName>Non-Working Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Working Capability Building</fullName>
                </value>
                <value>
                    <fullName>Non-Working OOP</fullName>
                </value>
                <value>
                    <fullName>Non-Working Other</fullName>
                </value>
                <value>
                    <fullName>Non-Working Production</fullName>
                </value>
                <value>
                    <fullName>Non-Working Research</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outdoor advertising (for example: billboards, bus shelters, trains, taxis, etc.)</fullName>
                </value>
                <value>
                    <fullName>Radio advertising, includes streaming services and podcasts</fullName>
                </value>
                <value>
                    <fullName>Recommendation from bartenders or waiters in bars, restaurants or nightclubs</fullName>
                </value>
                <value>
                    <fullName>Recommendation from family, friends, acquaintances, colleagues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>