SFUSA/force-app/main/default/objects/Campaign__c/fields/GLAccountType__c.field-meta.xml
<CustomField>
        <fullName>GLAccountType__c</fullName>
        <label>GL Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CampaignType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Production</fullName>
                </value>
                <value>
                    <fullName>Agency Fees</fullName>
                </value>
                <value>
                    <fullName>Agency OOP</fullName>
                </value>
                <value>
                    <fullName>Brand Education</fullName>
                </value>
                <value>
                    <fullName>Digital Rebates</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Non Working</fullName>
                </value>
                <value>
                    <fullName>Off Premise</fullName>
                </value>
                <value>
                    <fullName>Off-Trade</fullName>
                </value>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>On-Trade</fullName>
                </value>
                <value>
                    <fullName>Other Brand Investment</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Non-Premise</fullName>
                </value>
                <value>
                    <fullName>3rd Party Brand Investment</fullName>
                    <isActive>false</isActive>
                    <label>3rd Party Brand Investment</label>
                </value>
                <value>
                    <fullName>AdProduction</fullName>
                    <isActive>false</isActive>
                    <label>AdProduction</label>
                </value>
                <value>
                    <fullName>BI - FX</fullName>
                    <isActive>false</isActive>
                    <label>BI - FX</label>
                </value>
                <value>
                    <fullName>BI - I/C Rebill</fullName>
                    <isActive>false</isActive>
                    <label>BI - I/C Rebill</label>
                </value>
                <value>
                    <fullName>BrandEducation</fullName>
                    <isActive>false</isActive>
                    <label>BrandEducation</label>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                    <isActive>false</isActive>
                    <label>Miscellaneous</label>
                </value>
                <value>
                    <fullName>Non_Working</fullName>
                    <isActive>false</isActive>
                    <label>Non_Working</label>
                </value>
                <value>
                    <fullName>OffTrade</fullName>
                    <isActive>false</isActive>
                    <label>OffTrade</label>
                </value>
                <value>
                    <fullName>Off_Premise</fullName>
                    <isActive>false</isActive>
                    <label>Off_Premise</label>
                </value>
                <value>
                    <fullName>OnTrade</fullName>
                    <isActive>false</isActive>
                    <label>OnTrade</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>